Update Ansible enhanced installation script.yaml

--- a/Ansible enhanced installation script.yaml
+++ b/Ansible enhanced installation script.yaml
@@ -55,6 +55,7 @@
         update_cache: yes
         state: present
       loop: "{{ packages_Ubuntu }}"
+      loop: "{{ packages_CentOs }}"
       tags:
         - nagios
     - name: Download the source to temp folder
